--- a/ol.html
+++ b/ol.html
@@ -721,7 +721,7 @@ $(document).ready(function() {
 
   
     <div class="footer clear text-right">
-                    <p class="info text-center"><a href="http://www.online.net/cgv-en.pdf">Condition of Sales</a> - <a href="http://www.online.net/cgv-dedie-en.pdf">T&S dedicated server</a> - <a href="http://www.online.net/cgv-dedirack-en.pdf">T&S dedirack</a> - <a href="http://www.online.net/cgv-c14-en.pdf">T&S C14</a> - <a href="http://www.online.net/en/document-legal/legal-notices">Legal notices</a><br />Copyright © 1999-2017 - Online SAS - BP 438 - 75366 Paris CEDEX 08 - RCS Paris B 433 115 904</p>
+                    <p class="info text-center"><a href="https://www.online.net/cgv-en.pdf">Condition of Sales</a> - <a href="https://www.online.net/cgv-dedie-en.pdf">T&S dedicated server</a> - <a href="https://www.online.net/cgv-dedirack-en.pdf">T&S dedirack</a> - <a href="https://www.online.net/cgv-c14-en.pdf">T&S C14</a> - <a href="https://www.online.net/en/document-legal/legal-notices">Legal notices</a><br />Copyright © 1999-2017 - Online SAS - BP 438 - 75366 Paris CEDEX 08 - RCS Paris B 433 115 904</p>
         </div>
 
   </div>
